@@ -101,7 +101,7 @@ public class SystemAdminAccountService {
                           "has attempted to create a System Admin account, which has: " + result.toString()));
 
         List<String> existingAdminEmails = userRepository.findByRoles(Roles.SYSTEM_ADMIN)
-            .stream().map(PiUser::getEmail).collect(Collectors.toList());
+            .stream().map(PiUser::getEmail).toList();
 
         var createSystemAdminAction = new CreateSystemAdminAction();
         createSystemAdminAction.setAccountEmail(systemAdminAccount.getEmail());
@@ -125,7 +125,7 @@ public class SystemAdminAccountService {
             var erroredSystemAdminAccount = new ErroredSystemAdminAccount(account);
             erroredSystemAdminAccount.setErrorMessages(constraintViolationSet
                                                            .stream().map(constraint -> constraint.getPropertyPath()
-                    + ": " + constraint.getMessage()).collect(Collectors.toList()));
+                    + ": " + constraint.getMessage()).toList());
 
             handleNewSystemAdminAccountAction(account, issuerId, ActionResult.FAILED, name);
             throw new SystemAdminAccountException(erroredSystemAdminAccount);
